# ARVIA

./: CITATION.cff  README.md  pyproject.toml  setup.py
arvia/: arvia.py
arvia/data/examples/: example_result.xlsx
arvia/envs/: arvia.yaml  arvia.yml  arvia_mlst.yml  arvia_rgi.yml
arvia/utils/: aeruginosa_snippy.py  aeruginosa_truncations.py  combine_snippy_results.py  console_log.py  local_paths.py  prepare_files_for_igvreport.py  process_mlst.py  process_user_input.py  snakemake_common.py  test_pipeline.py  user_parser.py
arvia/workflows/: arvia.smk  dbs.smk
