[project]
name = "arvia"
version = "v0.1.2"
authors = [
  { name="Pablo Aja", email="paabloaja@gmail.com" },
]
description = "ARVIA (Antibiotic Resistance Variant Identifier for Pseudomonas aeruginosa) takes single-end/paired-end reads and/or assemblies to perform exhaustive variant calling of genes related to antibiotic resistance in Pseudomonas aeruginosa."
readme = "README.md"
requires-python = ">= 3.8, <3.9"
classifiers=[
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "snakemake==7.18.0",
    "pandas==1.5.0",
    "numpy==1.23.1",
    "odfpy==1.4.1",
    "colorama==0.4.4",
    "biopython>=1.78",
    "rich-argparse==1.6.0",
    "toml==0.10.2",
    "xlsxwriter",
]

[tool.black]
line-length = 119

[build-system]
requires = [
    "setuptools<=70",
    "setuptools-scm>=8.0", # ESSENTIAL: Makes it so all files tracked by git are included in build
    "pytest",
    "pytest-cov",
    # "build==1.2.2", # conda uses python-build
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["arvia"]

[project.scripts]
arvia = "arvia.arvia:main"

[project.urls]
Homepage = "https://github.com/Pablo-Aja-Macaya/ARVIA"
Issues = "https://github.com/Pablo-Aja-Macaya/ARVIA/issues"
